LineSize changes.